package com.adrianschrader.pontoon;

/**
 * 
 * @author adrian
 */
public abstract class Player {
    
    private final String name;
    private int score;
    
    public Player(String name) {
        this.name = name;
        this.score = 0;
    }
    
    protected final void rollDice(Dice dice) {
        this.score += dice.roll();
    }
    
    /**
     * Implement the playing algorithm here. The player can throw the dice 
     * several times using the rollDice(Dice dice) function. The goal is to get 
     * closer to the goalScore than the other players. If the goalScore is 
     * surpassed, the player has lost. 
     * @param dice Dice generated by the GameMaster, passed for inspection
     * @param goalScore The maximum score to win (Default: 21, A.K.A 17+4)
     */
    public abstract void play(Dice dice, int goalScore);
    
    /**
     * @return Name of the player, specified in the constructor
     */
    public final String getName() {
        return name;
    }
    
    /**
     * @return Score of the game, should be less than, but near the goalScore
     */
    public final int getScore() {
        return score;
    }
    
    /**
     * Reset score after every round
     */
    public final void resetScore() {
        this.score = 0;
    }
}
